--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html lang="fa" dir="rtl">
+<html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Manar — چت عاشقانه</title>
-    <meta name="theme-color" content="#5b2e9a" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Manar — Chat</title>
   </head>
   <body>
     <div id="root"></div>
